
    It was changed to work in this way a few years ago in #258913 due to the
    installer, and required to pass verbose flag to print these messages, but
    this was caused at least 3 bug reports (merged) to be explicit, and aptitude
    prints many other messages even ignoring these lines.  It can be made to be
    quiet with another flag, if needed.

- Documentation:

  * Quick help (help.txt):

    * Document 'l' (Limit Display) in quick help (Closes: #514541)

    * Improve description of '_' (Purge) (Closes: #495326)

    * Improve the description of the search shortcut, and point more clearly to
      search patterns in the full documentation

  * man page:

    * Fix example of '-F' with current and candidate versions (Closes: #752517)

  * Guide/User's Manual:

    * Upgrade doc/??/aptitude.xml documents from DocBook XML 4.2 to 4.5

    * Use XHTML 1.0 rather than HTML 4.01, at least to have something from this
      decade/century.  The resulting documentation still does not fully validate
      (see #496724), I think that due to bugs/problems of docbook-xsl
      conversions using invalid elements in the different standards (tried HTML
      4.0, 4.01, XHTML 1.0 and 1.1).

    * Generate 'alt' tag for images in HTML documentation (see #496724)

    * In "Customizing the package list", fix order of variables
      ::UI::Package-Status-Format and ::UI::Package-Header-Format and their
      explanations

- User visible changes:

  * Slightly change description of shortcut 'g' in title bar (Closes: #247487)

- Internal changes:

  * search_graph.h, fix problem with code which was working for many years (with
    boost 1.55 and many versions before), but now the straightforward option to
    convert boost::optional to bool does not work with gcc-5.2 and boost-1.58,
    so use .is_initialized() instead.

  * solution_item.cc, copy string of package name coming from libapt because it